tswow: fix thread_pool linux compilation

--- a/tools/blpconverter/CMakeLists.txt
+++ b/tools/blpconverter/CMakeLists.txt
@@ -13,3 +13,9 @@ target_include_directories(blpconverter PUBLIC
 	include/zlib
 	include/thread_pool
 )
+
+if(UNIX)
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+	find_package(Threads REQUIRED)
+	target_link_libraries(blpconverter PRIVATE Threads::Threads)
+endif()
