--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,18 +4,15 @@ on:
     branches: [ "master", "stdlib-merge" ]
   workflow_dispatch:
 jobs:
-  ubuntu-clang:
+  ubuntu-clang-trinitycore:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Remove MySQL
-        run: sudo apt-get remove --purge mysql-common
-      - name: Install submodules
-        run: git submodule update --init --recursive
-      - name: Install deps
-        run: sudo apt-get update && sudo apt-get install git clang cmake make gcc g++ libmariadbclient-dev libssl-dev libbz2-dev libreadline-dev libncurses-dev libboost-all-dev mariadb-server p7zip libmariadb-client-lgpl-dev-compat
-      - name: Build tswow
-        run: npm run build
+        with:
+          submodules: 'recursive'
+      - uses: ./.github/actions/setup_ubuntu
+        with:
+          build-args: noac
 
   windows-msvc-2019:
     runs-on: windows-2019
