ci: run ci on pull request

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on:
   push:
     branches: [ "master" ]
+  pull_request:
   workflow_dispatch:
 jobs:
   ubuntu-clang-trinitycore:
@@ -28,7 +29,7 @@ jobs:
       - uses: ./.github/actions/publish_windows
         env:
           TSWOW_UPLOAD_URL: ${{secrets.TSWOW_UPLOAD_URL}}
-        if: "${{ env.TSWOW_UPLOAD_URL != ''}}"
+        if: "${{ env.TSWOW_UPLOAD_URL != '' && GITHUB_EVENT_NAME != 'pull_request'}}"
         with:
           core: 'trinitycore'
           token: ${{secrets.GITHUB_TOKEN}}
