--- a/package.json
+++ b/package.json
@@ -1,81 +1,69 @@
 {
     "name": "tswow",
-    "description": "",
-    "homepage": "https://github.com/tswow/tswow#readme",
     "version": "1.0.0",
-    "bugs": {
-        "url": "https://github.com/tswow/tswow/issues"
-    },
-    "license": "GPL-3.0-only",
-    "author": "tswow",
+    "description": "",
     "main": "build.js",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/tswow/tswow.git"
+    "dependencies": {
+      "@swc/cli": "0.1.54",
+      "@swc/core": "1.2.120",
+      "@types/chokidar": "^2.1.3",
+      "@types/clipboardy": "^2.0.1",
+      "@types/deasync": "^0.1.1",
+      "@types/js-yaml": "^3.12.5",
+      "@types/md5": "^2.2.0",
+      "@types/mocha": "^8.0.3",
+      "@types/mysql": "^2.15.15",
+      "@types/node": "^14.14.34",
+      "@types/node-sql-parser": "^1.1.0",
+      "@types/pngjs": "^6.0.1",
+      "@types/request": "^2.48.5",
+      "@types/terminal-kit": "^1.28.2",
+      "@types/xml2js": "^0.4.5",
+      "adm-zip": "^0.4.16",
+      "bigint-conversion": "^2.2.1",
+      "chokidar": "^3.5.2",
+      "clipboardy": "^2.3.0",
+      "cross-spawn": "^7.0.3",
+      "deasync": "^0.1.21",
+      "extract-zip": "^2.0.1",
+      "fs-extra": "^9.0.1",
+      "install": "^0.13.0",
+      "js-yaml": "^3.14.0",
+      "md5": "^2.3.0",
+      "md5-file": "^5.0.0",
+      "mocha": "^8.1.3",
+      "mysql2": "^2.2.5",
+      "ncp": "^2.0.0",
+      "node-sql-parser": "^3.1.0",
+      "nodejs-file-downloader": "^4.9.2",
+      "path": "^0.12.7",
+      "pngjs": "^6.0.0",
+      "pureimage": "^0.3.5",
+      "request": "^2.88.2",
+      "request-progress": "^3.0.0",
+      "source-map": "^0.7.3",
+      "source-map-support": "^0.5.19",
+      "sync-mysql": "^3.0.1",
+      "terminal-kit": "^1.44.0",
+      "typescript": "4.7.3",
+      "typescript-to-lua": "1.6.2",
+      "xml2js": "^0.4.23"
     },
     "scripts": {
-        "build": "node build.js",
-        "build-interactive": "node build.js --interactive",
-        "build-release": "node build.js --release",
-        "test": "mocha --recursive --require source-map-support/register bin/scripts/tswow/test",
-        "otest": "mocha --recursive --require source-map-support/register bin/scripts/tswow/test --grep "
+      "build": "node build.js",
+      "build-interactive": "node build.js --interactive",
+      "build-release": "node build.js --release",
+      "test": "mocha --recursive --require source-map-support/register bin/scripts/tswow/test",
+      "otest": "mocha --recursive --require source-map-support/register bin/scripts/tswow/test --grep "
     },
-    "dependencies": {
-        "adm-zip": "^0.5",
-        "bigint-conversion": "^2.4",
-        "chokidar": "^3.5",
-        "clipboardy": "2.3.0",
-        "cross-spawn": "^7.0",
-        "deasync": "^0.1",
-        "extract-zip": "^2.0",
-        "fs-extra": "^11.1",
-        "install": "^0.13",
-        "js-yaml": "^4.1",
-        "md5": "^2.3",
-        "md5-file": "^5.0",
-        "mysql": "^2.18",
-        "mysql2": "^3.6",
-        "ncp": "^2.0",
-        "node-sql-parser": "^4.10",
-        "nodejs-file-downloader": "^4.12",
-        "path": "^0.12",
-        "pngjs": "^7.0",
-        "pureimage": "^0.4",
-        "request": "^2.88",
-        "request-progress": "^3.0",
-        "source-map": "^0.7",
-        "source-map-support": "^0.5",
-        "sync-mysql": "^3.0",
-        "terminal-kit": "^3.0",
-        "xml2js": "^0.6",
-        "@swc/cli": "0.1.54",
-        "@swc/core": "1.2.120",
-        "@types/adm-zip": "^0.5",
-        "@types/chokidar": "^2.1",
-        "@types/clipboardy": "^2.0",
-        "@types/cross-spawn": "^6.0",
-        "@types/deasync": "^0.1",
-        "@types/extract-zip": "^2.0",
-        "@types/fs-extra": "^11.0",
-        "@types/js-yaml": "^4.0",
-        "@types/md5": "^2.3",
-        "@types/md5-file": "^5.0",
-        "@types/mocha": "^10.0",
-        "@types/mysql": "^2.15",
-        "@types/ncp": "^2.0",
-        "@types/node": "^20.6",
-        "@types/node-sql-parser": "^1.1",
-        "@types/pngjs": "^6.0",
-        "@types/request": "^2.48",
-        "@types/source-map": "^0.5",
-        "@types/source-map-support": "^0.5",
-        "@types/terminal-kit": "^2.5",
-        "@types/xml2js": "^0.4",
-        "mocha": "^10.2",
-        "typescript": "4.7.*",
-        "typescript-to-lua": "1.6.*"
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/tswow/tswow.git"
     },
-    "private": false,
-    "devDependencies": {
-    }
-}
+    "author": "",
+    "license": "GPL-3.0-only",
+    "bugs": {
+      "url": "https://github.com/tswow/tswow/issues"
+    },
+    "homepage": "https://github.com/tswow/tswow#readme"
+  }
